# Homework_8_2

./: .gitignore  README.md  pyproject.toml
src/: consumer.py  models.py  producer.py
