[tool.poetry]
name = "homework-8-2"
version = "0.1.0"
description = ""
authors = ["Nyambevos <ruslan.bilokoniuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis-lru = "^0.1.2"
pika = "^1.3.2"
celery = "^5.3.6"
mongoengine = "^0.28.2"
faker = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
